# HTS_Transformer

./: .gitignore  README.md  pyproject.toml
create_gif/csv_data/: bLine1.csv  bLine10.csv  bLine11.csv  bLine12.csv  bLine2.csv  bLine3.csv  bLine4.csv  bLine5.csv  bLine6.csv  bLine7.csv  bLine8.csv  bLine9.csv  jLine1.csv  jLine10.csv  jLine11.csv  jLine12.csv  jLine13.csv  jLine14.csv  jLine15.csv  jLine16.csv  jLine2.csv  jLine3.csv  jLine4.csv  jLine5.csv  jLine6.csv  jLine7.csv  jLine8.csv  jLine9.csv
data/: bLineRx_m1f10_sin_y0005.txt  bLineRx_m1f10_sin_y001.txt  bLineRx_m1f10_triangle_y0005.txt  bLineRx_m1f10_updownpause_y0007.txt  bLineRx_m1f10_uppausedown_y0007.txt  jLineRx_m1f10_sin_y0.txt  jLineRx_m1f10_sin_y004.txt  jLineRx_m1f10_triangle_y001.txt  jLineRx_m1f10_triangle_y0025.txt  jLineRx_m1f10_uppausedown_y0.txt  jLineRx_m1f10_uppausedown_y001.txt
src/data/: bLineRx_m1f10_sin_y0007.txt  bLineRx_m1f10_triangle_y0007.txt  bLineRx_m1f10_triangle_y001.txt  bLineRx_m1f10_updownpause_y0005.txt  bLineRx_m1f10_updownpause_y001.txt  bLineRx_m1f10_uppausedown_y0005.txt  bLineRx_m1f10_uppausedown_y001.txt  jLineRx_m1f10_sin_y001.txt  jLineRx_m1f10_sin_y0025.txt  jLineRx_m1f10_triangle_y0.txt  jLineRx_m1f10_triangle_y004.txt  jLineRx_m1f10_updownpause_y0.txt  jLineRx_m1f10_updownpause_y001.txt  jLineRx_m1f10_updownpause_y0025.txt  jLineRx_m1f10_updownpause_y004.txt  jLineRx_m1f10_uppausedown_y0025.txt  jLineRx_m1f10_uppausedown_y004.txt
src/hts_transformer/: __init__.py  hts_transformer.ipynb  hts_transformer_v1.ipynb  loss.csv
