[project]
name = "hts-transformer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shuan", email = "suneemon.com@gmail.com" }
]
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "imageio>=2.36.0",
    "ipython>=8.28.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hts_transformer"]
